# cpp-here

./: .gitignore  README.md  config_template.py  cpp-here.py  prompt.py  pyproject.toml  requirements.txt
res/: .gitignore  CMakeLists.txt  CMakeListsLibrary.txt  CMakePresets.json  CMakeUserPresets_.json
res/cmake/: FindSphinx.cmake  ProjectSettings.cmake  TargetSourceExtensions.cmake
res/docs/: CMakeLists.txt  Doxyfile.in
res/examples/: CMakeLists.txt
res/lib/: CMakeLists.txt  CMakeListsHeaderOnly.txt
res/src/: CMakeLists.txt
res/tests/: CMakeLists.txt
